--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-formik-wizard",
   "version": "1.0.0",
-  "description": "A simple json based wizard component for creating wizards with React and Formik",
+  "description": "A simple json based wizard component for creating wizards with React, Formik and Base Web UI",
   "author": "fatmali",
   "license": "MIT",
   "repository": "fatmali/react-formik-wizard",
@@ -34,9 +34,10 @@
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.7",
+    "@types/styletron-engine-atomic": "^1.1.0",
+    "@types/styletron-react": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
-    "microbundle-crl": "^0.13.10",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
@@ -50,6 +51,7 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
+    "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react": "^16.13.1",
@@ -59,5 +61,11 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "baseui": "^9.106.3",
+    "formik": "^2.2.6",
+    "styletron-engine-atomic": "^1.4.6",
+    "styletron-react": "^5.2.7"
+  }
 }
