--- a/package.json
+++ b/package.json
@@ -53,11 +53,15 @@
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.4",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
     "typescript": "^3.7.5"
+  },
+  "husky": {
+    "precommit": "pretty-quick --staged && npm run lint && npm run test:units"
   },
   "files": [
     "dist"
@@ -65,6 +69,7 @@
   "dependencies": {
     "baseui": "^9.106.3",
     "formik": "^2.2.6",
+    "husky": "^4.3.6",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7"
   }
