--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "dist"
   ],
   "dependencies": {
+    "@demvsystems/yup-ast": "^1.2.0",
     "baseui": "^9.106.3",
     "formik": "^2.2.6",
     "husky": "^4.3.6",
