--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,9 +17,8 @@ jobs:
     - name: Setup Node
       uses: actions/setup-node@v1.4.4
       with:
-        always-auth: true
         node-version: '12.x'
     - name: Install dependencies
-      run: npm install
+      run: npm ci
     - name: Run tests
       run: npm run test:unit
