--- a/example/package.json
+++ b/example/package.json
@@ -18,10 +18,11 @@
     "@types/react": "link:../node_modules/@types/react",
     "@types/react-dom": "link:../node_modules/@types/react-dom",
     "react": "link:../node_modules/react",
+    "react-day-picker": "^7.4.8",
     "react-dom": "link:../node_modules/react-dom",
+    "react-formik-wizard": "link:..",
     "react-scripts": "link:../node_modules/react-scripts",
-    "typescript": "link:../node_modules/typescript",
-    "react-formik-wizard": "link:.."
+    "typescript": "link:../node_modules/typescript"
   },
   "devDependencies": {
     "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
